keepcalm-web/src-tauri/build_error_2.txt
cargo :    Compiling 
keepcalm-web v0.1.0 (C:\U
sers\ryhan_Schutz\Documen
ts\keepcalm_Web\keepcalm_
web\keepcalm-web\src-taur
i)
No linha:1 caractere:1
+ cargo build 2>&1 | 
Out-File -FilePath 
build_error_2.txt 
-Encoding utf ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo       
       : NotSpecified:   
  (   Compiling ke...-   
 web\src-tauri):Strin    
g) [], RemoteExcepti    
on
    + FullyQualifiedErro 
   rId : NativeCommandE  
  rror
 
warning: unused import: 
`Manager`
 --> 
src\traffic\mod.rs:7:24
  |
7 | use 
tauri::{AppHandle, 
Manager, Emitter};
  |                      
  ^^^^^^^
  |
  = note: `#[warn(unused_
imports)]` (part of 
`#[warn(unused)]`) on by 
default

warning: variable does 
not need to be mutable
   --> src\commands\tabs.
rs:106:17
    |
106 |             let 
mut tx = crate::traffic::
models::HttpTransaction {
    |                 
----^^
    |                 |
    |                 
help: remove this `mut`
    |
    = note: 
`#[warn(unused_mut)]` 
(part of 
`#[warn(unused)]`) on by 
default

error[E0521]: borrowed 
data escapes outside of 
function
   --> src\commands\tabs.
rs:69:27
    |
 16 |       
traffic_state: State<'_, 
crate::traffic::TrafficSt
ate>,
    |       
-------------        -- 
let's call the lifetime 
of this reference `'1`
    |       |
    |       
`traffic_state` is a 
reference that is only 
valid in the function 
body
...
 69 |       let 
webview_builder = webview
_builder.on_web_resource_
request(move |request, 
response| {
    |  __________________
_________^
 70 | |         let uri 
= request.uri().to_string
();
...   |
122 | |     });
    | |      ^
    | |      |
    | 
|______`traffic_state` 
escapes the function 
body here
    |        argument 
requires that `'1` must 
outlive `'static`

For more information 
about this error, try 
`rustc --explain E0521`.
warning: `keepcalm-web` 
(lib) generated 2 
warnings
error: could not compile 
`keepcalm-web` (lib) due 
to 1 previous error; 2 
warnings emitted
